force-app/main/default/objects/Opportunity/fields/Oportunidad_Interna_Generada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Interna_Generada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad Interna Generada</label>
    <type>Checkbox</type>
</CustomField>