force-app/main/default/objects/Opportunity/fields/Oportunidad_leads_generada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_leads_generada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad leads generada</label>
    <type>Checkbox</type>
</CustomField>