force-app/main/default/objects/Opportunity/fields/Oportunidad_original__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad original</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>