force-app/main/default/objects/Opportunity/fields/Oportunidad_Principal_Generada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Principal_Generada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad Principal Generada</label>
    <type>Checkbox</type>
</CustomField>