force-app/main/default/objects/Opportunity/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat On Line</fullName>
            </value>
            <value>
                <fullName>Contact Center Inbound</fullName>
            </value>
            <value>
                <fullName>Contact Center Outbound</fullName>
            </value>
            <value>
                <fullName>Email Contact Center</fullName>
            </value>
            <value>
                <fullName>Facebook organico</fullName>
            </value>
            <value>
                <fullName>Facebook pago</fullName>
            </value>
            <value>
                <fullName>Referido Contact Center</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Lead Nurturing</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Google Organico</fullName>
            </value>
            <value>
                <fullName>Sitio Web</fullName>
            </value>
            <value>
                <fullName>SMS Outbound</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Feria/Evento</fullName>
            </value>
            <value>
                <fullName>ExpoMóvil</fullName>
            </value>
            <value>
                <fullName>Licitación</fullName>
            </value>
            <value>
                <fullName>Llamé</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Llamó</fullName>
            </value>
            <value>
                <fullName>Cuentas Claves</fullName>
            </value>
            <value>
                <fullName>Cuentas Corporativas</fullName>
            </value>
            <value>
                <fullName>Visité</fullName>
            </value>
            <value>
                <fullName>Visitó Sucursal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>