force-app/main/default/objects/Opportunity/fields/Owner_de_la_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Owner_de_la_oportunidad__c</fullName>
    <description>este campo de usutiliza para enviar salientes desde la oportunidad par que el mensaje setee el nombre del vendedor</description>
    <formula>Owner.FirstName+&apos; &apos;+Owner.LastName</formula>
    <label>Owner de la oportunidad</label>
    <type>Text</type>
</CustomField>