force-app/main/default/objects/Opportunity/fields/Pendiente_de_Asignar__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_Asignar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pendiente de Asignar</label>
    <type>Checkbox</type>
</CustomField>