force-app/main/default/objects/Opportunity/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEP</label>
    <type>Checkbox</type>
</CustomField>