force-app/main/default/objects/Opportunity/fields/Permite_Ganar_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Permite_Ganar_Oportunidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permite Ganar Oportunidad</label>
    <type>Checkbox</type>
</CustomField>