force-app/main/default/objects/Opportunity/fields/Plazo__c.field-meta.xml
<CustomField>
    <fullName>Plazo__c</fullName>
    <label>Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quien_concede__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 meses</fullName>
            </value>
            <value>
                <fullName>18 meses</fullName>
            </value>
            <value>
                <fullName>24 meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>