force-app/main/default/objects/Opportunity/fields/Posible_compra_futura__c.field-meta.xml
<CustomField>
    <fullName>Posible_compra_futura__c</fullName>
    <label>Posible compra futura</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 mes</fullName>
            </value>
            <value>
                <fullName>2 meses</fullName>
            </value>
            <value>
                <fullName>3 meses</fullName>
            </value>
            <value>
                <fullName>c</fullName>
                <isActive>false</isActive>
                <label>c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>