force-app/main/default/objects/Opportunity/fields/Precio_diferente__c.field-meta.xml
<CustomField>
    <fullName>Precio_diferente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Precio diferente</label>
    <type>Checkbox</type>
</CustomField>