force-app/main/default/objects/Opportunity/fields/Precio_indicado_por_Jefe_de_Autolote__c.field-meta.xml
<CustomField>
    <fullName>Precio_indicado_por_Jefe_de_Autolote__c</fullName>
    <label>Precio indicado por Jefe de Autolote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>