force-app/main/default/objects/Opportunity/fields/Precio_Sugerido_por_Evaluador__c.field-meta.xml
<CustomField>
    <fullName>Precio_Sugerido_por_Evaluador__c</fullName>
    <label>Precio Sugerido por Evaluador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>