force-app/main/default/objects/Opportunity/fields/Prima__c.field-meta.xml
<CustomField>
    <fullName>Prima__c</fullName>
    <label>Prima %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>