force-app/main/default/objects/Opportunity/fields/Procedencia_de_los_fondos__c.field-meta.xml
<CustomField>
    <fullName>Procedencia_de_los_fondos__c</fullName>
    <label>Procedencia de los fondos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instituciones financieras</fullName>
            </value>
            <value>
                <fullName>Microfinancieras</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>