force-app/main/default/objects/Opportunity/fields/Producto_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Producto_Financiamiento__c</fullName>
    <label>Producto Financiamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ciclo</fullName>
            </value>
            <value>
                <fullName>Go</fullName>
            </value>
            <value>
                <fullName>Bac</fullName>
            </value>
            <value>
                <fullName>Avanz</fullName>
            </value>
            <value>
                <fullName>Banpro</fullName>
            </value>
            <value>
                <fullName>Lafise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>