force-app/main/default/objects/Opportunity/fields/Productos_reservados__c.field-meta.xml
<CustomField>
    <fullName>Productos_reservados__c</fullName>
    <label>Productos reservados</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Chasis__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>