force-app/main/default/objects/Opportunity/fields/Prop_sito_de_Aval_o__c.field-meta.xml
<CustomField>
    <fullName>Prop_sito_de_Aval_o__c</fullName>
    <label>Propósito de Avalúo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avalúo- Compra</fullName>
            </value>
            <value>
                <fullName>Avalúo- Personal</fullName>
            </value>
            <value>
                <fullName>Intercambio- Nuevo</fullName>
            </value>
            <value>
                <fullName>Intercambio- Usado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>