force-app/main/default/objects/Opportunity/fields/Prueba_de_manejo__c.field-meta.xml
<CustomField>
    <fullName>Prueba_de_manejo__c</fullName>
    <label>Prueba de manejo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>