force-app/main/default/objects/Opportunity/fields/Quien_concede__c.field-meta.xml
<CustomField>
    <fullName>Quien_concede__c</fullName>
    <label>Quién concede</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAMA</fullName>
            </value>
            <value>
                <fullName>CREDEX</fullName>
            </value>
            <value>
                <fullName>CREDIFACIL</fullName>
            </value>
            <value>
                <fullName>TU CREDITO</fullName>
            </value>
            <value>
                <fullName>INSTACREDIT</fullName>
            </value>
            <value>
                <fullName>FIDEM</fullName>
            </value>
            <value>
                <fullName>BANPRO</fullName>
            </value>
            <value>
                <fullName>BAC</fullName>
            </value>
            <value>
                <fullName>LAFISE</fullName>
            </value>
            <value>
                <fullName>FICOHSA</fullName>
            </value>
            <value>
                <fullName>FLEXI PAGOS</fullName>
            </value>
            <value>
                <fullName>CRÉDITO INTERNO</fullName>
            </value>
            <value>
                <fullName>AVANZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>