force-app/main/default/objects/Opportunity/fields/Radio__c.field-meta.xml
<CustomField>
    <fullName>Radio__c</fullName>
    <label>Radio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASSETE</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>DVD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>