force-app/main/default/objects/Opportunity/fields/Raz_n_de_Perdido_PMP__c.field-meta.xml
<CustomField>
    <fullName>Raz_n_de_Perdido_PMP__c</fullName>
    <label>Razón de Perdido PMP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Distancia</fullName>
            </value>
            <value>
                <fullName>No se pudo contactar</fullName>
            </value>
            <value>
                <fullName>No va al taller</fullName>
            </value>
            <value>
                <fullName>Forma de Pago</fullName>
            </value>
            <value>
                <fullName>Va al taller de forma regular</fullName>
            </value>
            <value>
                <fullName>Rent a Car</fullName>
            </value>
            <value>
                <fullName>Lo tomará en el taller</fullName>
            </value>
            <value>
                <fullName>No percibe valor del paquete</fullName>
            </value>
            <value>
                <fullName>Licitación</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Mala Experiencia en el Taller</fullName>
            </value>
            <value>
                <fullName>Vehículo No Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>