force-app/main/default/objects/Opportunity/fields/Razon_de_Perdido_GPS__c.field-meta.xml
<CustomField>
    <fullName>Razon_de_Perdido_GPS__c</fullName>
    <label>Razón de Perdido GPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No le interesa</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Ya tiene con otra empresa</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>