force-app/main/default/objects/Opportunity/fields/Razon_de_Perdido_Seguro__c.field-meta.xml
<CustomField>
    <fullName>Razon_de_Perdido_Seguro__c</fullName>
    <label>Razón de Perdido Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compro directamente en Aseguradora</fullName>
            </value>
            <value>
                <fullName>No comprará Seguro para su vehículo</fullName>
            </value>
            <value>
                <fullName>Tiene su corredor</fullName>
            </value>
            <value>
                <fullName>Exonerado</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>No se contactó a tiempo</fullName>
            </value>
            <value>
                <fullName>Licitación</fullName>
            </value>
            <value>
                <fullName>No se pudo contactar</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Cliente consiguió mejor oferta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>