force-app/main/default/objects/Opportunity/fields/Razon_perdida__c.field-meta.xml
<CustomField>
    <fullName>Razon_perdida__c</fullName>
    <label>Razón principal de perdida</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cliente no contesta</fullName>
            </value>
            <value>
                <fullName>Cliente sólo quería saber información</fullName>
            </value>
            <value>
                <fullName>No aplica a financiamiento</fullName>
            </value>
            <value>
                <fullName>Cliente Pospone Compra</fullName>
            </value>
            <value>
                <fullName>Ya atendido por otro vendedor</fullName>
            </value>
            <value>
                <fullName>Precio/Extras</fullName>
            </value>
            <value>
                <fullName>Inventario/Tiempo de entrega</fullName>
            </value>
            <value>
                <fullName>Disenio/Atributos</fullName>
                <label>Diseño/Atributos</label>
            </value>
            <value>
                <fullName>Facilidad credito competencia</fullName>
                <label>Facilidad crédito competencia</label>
            </value>
            <value>
                <fullName>Cliente no brinda datos UAF</fullName>
            </value>
            <value>
                <fullName>Oportunidad Duplicada</fullName>
            </value>
            <value>
                <fullName>Cliente en Lista Negra</fullName>
            </value>
            <value>
                <fullName>Cambio de Nombre/Razon social</fullName>
                <label>Cambio de Nombre/Razón social</label>
            </value>
            <value>
                <fullName>Se sintio mejor atendido en otra empresa</fullName>
                <label>Se sintió mejor atendido en otra empresa</label>
            </value>
            <value>
                <fullName>Falta de seguimiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>