force-app/main/default/objects/Opportunity/fields/Referido_por_Vendedor_Autos_Nuevos__c.field-meta.xml
<CustomField>
    <fullName>Referido_por_Vendedor_Autos_Nuevos__c</fullName>
    <label>Referido por Vendedor Autos Nuevos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Aplica</fullName>
            </value>
            <value>
                <fullName>Sí, en la reserva en persona</fullName>
            </value>
            <value>
                <fullName>Sí, en la entrega en persona</fullName>
            </value>
            <value>
                <fullName>Si, por teléfono</fullName>
            </value>
            <value>
                <fullName>Si, en Combo</fullName>
            </value>
            <value>
                <fullName>Vendedor dio teléfono</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>