force-app/main/default/objects/Opportunity/fields/Reserva_Recibo__c.field-meta.xml
<CustomField>
    <fullName>Reserva_Recibo__c</fullName>
    <label>Reserva/Recibo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>