force-app/main/default/objects/Opportunity/fields/Responsable_del_pago__c.field-meta.xml
<CustomField>
    <fullName>Responsable_del_pago__c</fullName>
    <label>Responsable del pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facturado</fullName>
            </value>
            <value>
                <fullName>Tercero Familiar</fullName>
            </value>
            <value>
                <fullName>Tercero Ajeno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>