force-app/main/default/objects/Opportunity/fields/Riesgo__c.field-meta.xml
<CustomField>
    <fullName>Riesgo__c</fullName>
    <label>Riesgo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>