force-app/main/default/objects/Opportunity/fields/Rines__c.field-meta.xml
<CustomField>
    <fullName>Rines__c</fullName>
    <label>Rines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lujo</fullName>
            </value>
            <value>
                <fullName>Convencional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>