force-app/main/default/objects/Opportunity/fields/SDR_Signal__c.field-meta.xml
<CustomField>
    <fullName>SDR_Signal__c</fullName>
    <formula>IF(
AND(
NOT(ISPICKVAL(StageName, &apos;Cerrada ganada&apos;)),
NOT(ISPICKVAL(StageName, &apos;Cerrada perdida&apos;))
),
IF (Fecha_vencimiento_tarea__c &gt;= TODAY(),

     IMAGE(&quot;/servlet/servlet.FileDownload?file=0153k00000AfToT&quot;, &quot;Verde&quot;, 20,20) &amp; &quot; &quot; &amp; Asunto_de_tarea__c, 

     IMAGE(&quot;/servlet/servlet.FileDownload?file=0153k00000AfToY&quot;, &quot;Rojo&quot;, 20,20)&amp; &quot; &quot; &amp; Asunto_de_tarea__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicador tarea</label>
    <type>Text</type>
</CustomField>