force-app/main/default/objects/Opportunity/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particular</fullName>
            </value>
            <value>
                <fullName>Empresa</fullName>
            </value>
            <value>
                <fullName>Gobierno</fullName>
            </value>
            <value>
                <fullName>Rent a Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>