force-app/main/default/objects/Opportunity/fields/Sucursal_2__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_2__c</fullName>
    <description>Utilizada como workaround</description>
    <label>Sucursal 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altamira</fullName>
            </value>
            <value>
                <fullName>Chinandega</fullName>
            </value>
            <value>
                <fullName>Estelí</fullName>
            </value>
            <value>
                <fullName>Granada</fullName>
            </value>
            <value>
                <fullName>Juigalpa</fullName>
            </value>
            <value>
                <fullName>Kia El Retiro</fullName>
            </value>
            <value>
                <fullName>León</fullName>
            </value>
            <value>
                <fullName>Matagalpa</fullName>
            </value>
            <value>
                <fullName>Plaza España</fullName>
            </value>
            <value>
                <fullName>Puerto Cabezas</fullName>
            </value>
            <value>
                <fullName>Rivas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>