force-app/main/default/objects/Opportunity/fields/SUM__c.field-meta.xml
<CustomField>
    <fullName>SUM__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUM</label>
    <type>Checkbox</type>
</CustomField>