force-app/main/default/objects/Opportunity/fields/Tapicer_a__c.field-meta.xml
<CustomField>
    <fullName>Tapicer_a__c</fullName>
    <label>Tapicería</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuero</fullName>
            </value>
            <value>
                <fullName>Sin tapicería</fullName>
            </value>
            <value>
                <fullName>Tela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>