force-app/main/default/objects/Opportunity/fields/Tareas_Completadas__c.field-meta.xml
<CustomField>
    <fullName>Tareas_Completadas__c</fullName>
    <description>Tareas completadas</description>
    <label>Tareas Completadas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>