force-app/main/default/objects/Opportunity/fields/Tiene_chasis_reservado__c.field-meta.xml
<CustomField>
    <fullName>Tiene_chasis_reservado__c</fullName>
    <formula>Productos_reservados__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R</label>
    <type>Checkbox</type>
</CustomField>