force-app/main/default/objects/Opportunity/fields/Tipo_de_financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_financiamiento__c</fullName>
    <label>Tipo de financiamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ciclo</fullName>
            </value>
            <value>
                <fullName>Go / Drive</fullName>
            </value>
            <value>
                <fullName>Línea de crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>