force-app/main/default/objects/Opportunity/fields/Tipo_de_GPS__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_GPS__c</fullName>
    <label>Tipo de GPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>