force-app/main/default/objects/Opportunity/fields/Tipo_de_relaci_n_econ_mica__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_relaci_n_econ_mica__c</fullName>
    <label>Tipo de relación económica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Credito</fullName>
            </value>
            <value>
                <fullName>Licitaciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>