force-app/main/default/objects/Opportunity/fields/Tipo_de_Seguro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Seguro__c</fullName>
    <label>Tipo de Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Póliza de daños propios</fullName>
            </value>
            <value>
                <fullName>Responsabilidad civil obligatoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>