force-app/main/default/objects/Opportunity/fields/Tipo_de_transacci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_transacci_n__c</fullName>
    <label>Tipo de transacción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anticipo o Prima</fullName>
            </value>
            <value>
                <fullName>Compra de Credito</fullName>
            </value>
            <value>
                <fullName>Compra de Contado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>