force-app/main/default/objects/Opportunity/fields/Tipo_de_visita__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_visita__c</fullName>
    <description>CAMPO PARA QUE LLENE EL ANFITRIÓN COMO PARTE DE SU TRACKING A LOS LEADS QUE ELLA CREÓ</description>
    <label>Tipo de visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEGUIMIENTO</fullName>
            </value>
            <value>
                <fullName>A RESERVAR</fullName>
            </value>
            <value>
                <fullName>ENTREGA</fullName>
            </value>
            <value>
                <fullName>PRUEBA DE MANEJO</fullName>
            </value>
            <value>
                <fullName>ABONAR PAGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>